--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
                 <li>Amet</li>
             </ul>
         </div>
+        <div class="carousel">
+            <div class="group">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">4</div>
+                <div class="card">5</div>
+                <div class="card">6</div>
+            </div>
+        </div>
+        <div class="carousel">
+            <div class="group">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">4</div>
+                <div class="card">5</div>
+                <div class="card">6</div>
+            </div>
+        </div>
+        <div class="carousel">
+            <div class="group">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">4</div>
+                <div class="card">5</div>
+                <div class="card">6</div>
+            </div>
+        </div>
         <img src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXfvSmWYxTAzkt9B9EYpjlSPI7mh66_7Oc2oaLt4S_ul14gX2qXkch8iWBu9FPrJtnWRjQpjtKrSBwEhpp5UIcM-MvnWseblSd6Jf-c8FbuNauhx5-ABGf0vwdsotzqyNCeWegrHog?key=fQIup5IIaUuL8GO7hzcPgQ" alt="Famous pins">
         <h6>These are some pins from history.</h6>
         <h1>Historical Pins Library</h1>
